# SDLEngine

./: CMakeLists.txt
App/: App.cpp  App.h  CMakeLists.txt
App/Input/: CMakeLists.txt
App/Scenes/: ArcadeScene.cpp  ArcadeScene.h  CMakeLists.txt  GameScene.cpp  GameScene.h  Scene.h
Games/: Game.h  IGame.h
Graphics/: CMakeLists.txt  Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
Input/: CMakeLists.txt  GameController.cpp  GameController.h  InputAction.h  InputController.cpp  InputController.h
Scene/: IScene.h
Shapes/: AARectangle.cpp  AARectangle.h  CMakeLists.txt  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Star2D.cpp  Star2D.h  Triangle.cpp  Triangle.h
Utils/: CMakeLists.txt  FileCommandLoader.cpp  FileCommandLoader.h  Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
